# safe_bayesian_optimization

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: lpsc.yaml  reactive_planner.yaml  safe_bayesian_optimization.yaml  safe_legged_scouting.yaml
include/: earcut.hpp  polygeom_lib.h  reactive_planner_lib.h
launch/: safe_bayesian_optimization.launch.py  safe_legged_scouting.launch.py
src/: goal_point_publisher.cpp  reactive_navigation_node.cpp  safe_bayesian_optimization_node.cpp  safe_legged_scouting_node.cpp  turtlesim_spatial_publisher.py
src/libraries/: polygeom_lib.cpp  reactive_planner_lib.cpp  reactive_planner_lib_ext.cpp
